Style: Fix RemoteController text align

--- a/src/containers/OrderPage/Order.module.scss
+++ b/src/containers/OrderPage/Order.module.scss
@@ -119,6 +119,7 @@
   ul {
     list-style: none;
     padding-left: 0;
+    text-align: end;
     a {
       text-decoration: none;
     }
